@@ -17,16 +17,17 @@
     <table name="mem">
       <column name="_id">34125</column>
       <column name="entry_name">vabDot</column>
-      <column name="part_of_speech">adv:hyp</column>
-      <column name="definition">even, moreover, including?</column>
+      <column name="part_of_speech">adv</column>
+      <column name="definition">even, moreover, including</column>
       <column name="definition_de"></column>
       <column name="synonyms"></column>
       <column name="antonyms"></column>
       <column name="see_also"></column>
-      <column name="notes">This word is known only from these sentences from {Klingon Monopoly:src}: {Qo'noS romuluS je boSuqlaH. vabDot tera' Qejbogh DIvI' ram boSuqlaH.:sen:nolink} "Kronos, Romulus and even the puny Federation's precious Earth, are all up for grabs."</column>
-      <column name="hidden_notes"></column>
+      <column name="notes"></column>
+      <column name="hidden_notes">An English definition has never been given for this word. Its meaning is inferred from the only example of its usage.</column>
       <column name="components"></column>
-      <column name="examples"></column>
+      <column name="examples">
+▶ {Qo'noS romuluS je boSuqlaH. vabDot tera' Qejbogh DIvI' ram boSuqlaH.:sen:nolink} "Kronos, Romulus and even the puny Federation's precious Earth, are all up for grabs."[1]</column>
       <column name="search_tags"></column>
       <column name="source">[1] {Klingon Monopoly:src}</column>
     </table>
